bad/sub_invalid_types_class_void.example_compiler_output
ERROR
[1mbad/sub_invalid_types_class_void.lat:8:4: [1;31merror: [0;1msubtraction is defined only for int values, not `X` and `void`[m
	x - foo();
	  [1;32m^[m
